bynkc/tests/fixtures/negative/492_messages_malformed_icu_offset/src/bundle.bynk
commons bundle

uses bynk.locale

messages en @reference {
  "cart.count" => "{n, plural, offset:1 one {#} other {#}}"
}
